# delong-datasets

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  DOCUMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PUBLISHING_GUIDE.md  PUBLISH_CHECKLIST.md  PYPI_SETUP_SUMMARY.md  QUICKSTART.md  README.md  USER_GUIDE.md  pyproject.toml  set-env.sh
.github/workflows/: ci.yml
scripts/: example_download.sh  mock_attestation_service.py  mock_auth_server.py  mock_tee_attestor.py  prepare_release.sh  start_mock_services.sh  test_e2e.sh
src/delong_datasets/: __init__.py  api.py  attestation.py  auth.py  cli.py  config.py  downloader.py  errors.py  metadata.py  policy.py  resumable.py
