[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delong-datasets"
version = "0.1.0"
description = "Python library for accessing sensitive life sciences datasets with TEE security controls"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "DeLong Team", email = "contact@example.com"}
]
keywords = ["datasets", "life-sciences", "tee", "security", "healthcare", "attestation", "confidential-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
  "datasets>=2.14",
]

[project.urls]
Homepage = "https://github.com/your-org/delong-datasets"
Documentation = "https://github.com/your-org/delong-datasets/blob/main/USER_GUIDE.md"
Repository = "https://github.com/your-org/delong-datasets"
Issues = "https://github.com/your-org/delong-datasets/issues"
Changelog = "https://github.com/your-org/delong-datasets/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mock = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.22",
]

[project.scripts]
delong-datasets = "delong_datasets.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["delong_datasets*"]
exclude = []

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Ignored rules:
#   "E501" -> line length violation
#   "F821" -> undefined named in type annotation (e.g. Literal["something"])
#   "C901" -> `function_name` is too complex
ignore = ["E501", "F821", "C901"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["datasets"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]

[tool.pytest.ini_options]
# Test fails if a FutureWarning is thrown by `huggingface_hub`
filterwarnings = [
    "error::FutureWarning:huggingface_hub*",
]
markers = [
    "unit: unit test",
    "integration: integration test",
]
